# wamn

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Dockerfile  README.md  ecqfh2pdjiqvujhltljld2jetcp7u4se  manifest  rust-toolchain.toml
components/: Cargo.toml
components/api-gateway/: Cargo.toml
components/api-gateway/src/: lib.rs
components/api-gateway/wit/: world.wit
components/busyloop/src/: main.rs
components/fixtures/busyloop/: Cargo.toml
components/fixtures/cred-probe/: Cargo.toml
components/fixtures/logspewer/: Cargo.toml
components/fixtures/pgprobe/: Cargo.toml
components/fixtures/sockprobe/: Cargo.toml
components/fixtures/trace-relay/: Cargo.toml
components/flow-driver/: Cargo.toml
components/flow-driver/src/: lib.rs
components/flow-driver/wit/: world.wit
components/flowrunner/: Cargo.toml
components/flowrunner/src/: lib.rs
components/flowrunner/wit/: world.wit
components/hello/src/: main.rs
components/logspewer/src/: lib.rs
components/logspewer/wit/: world.wit
components/materializer/: Cargo.toml
components/materializer/src/: main.rs
components/materializer/wit/: world.wit
components/memhog/: Cargo.toml
components/memhog/src/: main.rs
components/node-rs/: Cargo.toml
components/node-rs/src/: lib.rs
components/node-ts/: node.js
components/pgprobe/src/: lib.rs
components/pgprobe/wit/: world.wit
components/poc-webhook-f1/: Cargo.toml
components/poc-webhook-f1/src/: lib.rs
components/poc-webhook-f1/wit/: world.wit
components/sample-node/: Cargo.toml
components/samples/disposition-node/: Cargo.toml  cases-refusal-fixture.json  cases.json
components/samples/js-sample/: Cargo.toml
components/samples/node-cred/: Cargo.toml
components/samples/node-ts/: node.js
components/samples/sample-node/: Cargo.toml
components/webhook-entry/: Cargo.toml
components/webhook-entry/src/: lib.rs
components/webhook-entry/wit/: world.wit
crates/wamn-api/: Cargo.toml
crates/wamn-api/src/: error.rs  lib.rs  registration.rs  replica_identity.rs  router.rs  shape.rs  value.rs
crates/wamn-api/tests/: api.rs  registration.rs  registration_live.rs
crates/wamn-builder/: Cargo.toml
crates/wamn-builder/policy/: default-allowlist.toml
crates/wamn-builder/src/: allowlist.rs  build.rs  deploy_emit.rs  keygen.rs  lib.rs  main.rs  manifest_build.rs  registry.rs  sbom.rs  sign.rs  test_gate.rs
crates/wamn-builder/tests/: allowlist_fixture.rs  golden_deploy.rs  registry_push.rs
crates/wamn-cdc-reader/: Cargo.toml
crates/wamn-cdc-reader/src/: lib.rs  main.rs
crates/wamn-cdc-reader/tests/: event_reader_live.rs
crates/wamn-ctl/: Cargo.toml
crates/wamn-ctl/src/: copy_project_env.rs  env_policies.rs  impact_report.rs  lib.rs  main.rs  migrate_catalog.rs  pin_run.rs  provision.rs  provision_dashboards.rs  provision_project_env.rs  prune_run_history.rs  publish_catalog.rs  reconcile_replica_identity.rs  reconcile_run_plane.rs  restore_project_env.rs
crates/wamn-ctl/tests/: impact_report_live.rs  orphan_guard_live.rs  replica_identity_live.rs  ri_orch_live.rs  run_plane_live.rs  suite_promote_live.rs
crates/wamn-ddl/: Cargo.toml
crates/wamn-ddl/examples/: emit-outbox.rs
crates/wamn-ddl/src/: emit.rs  lib.rs  outbox.rs  plan.rs  sql.rs
crates/wamn-ddl/tests/: ddl.rs
crates/wamn-dispatcher/: Cargo.toml
crates/wamn-dispatcher/src/: lib.rs  main.rs
crates/wamn-event-reg/: Cargo.toml
crates/wamn-event-reg/src/: lib.rs  model.rs  oldref.rs  validate.rs
crates/wamn-event-reg/tests/: event_reg.rs
crates/wamn-event-wire/: Cargo.toml
crates/wamn-event-wire/src/: lib.rs
crates/wamn-flow/: Cargo.toml
crates/wamn-flow-tests/: Cargo.toml
crates/wamn-flow-tests/src/: lib.rs  sql.rs
crates/wamn-flow/examples/: print-schema.rs
crates/wamn-flow/src/: diff.rs  lib.rs  types.rs  validate.rs
crates/wamn-flow/tests/: flows.rs
crates/wamn-gate-harness/: Cargo.toml
crates/wamn-gate-harness/src/: ceiling.rs  lib.rs
crates/wamn-gates/: Cargo.toml
crates/wamn-gates/src/: apibench.rs  apifixture.rs  apiproof.rs  bench.rs  buildproof.rs  capturebench.rs  cdcbench.rs  credprobe.rs  credproof.rs  cutbench.rs  dashproof.rs  dispatchbench.rs  e2ebench.rs  egressbench.rs  erp_sim.rs  eventsbench.rs  f1bench.rs  f1fixture.rs  f1proof.rs  f2invoke.rs  f3proof.rs  f4proof.rs  failoverbench.rs  flowbench.rs  impactproof.rs  ladderproof.rs  logbench.rs  main.rs  matbench.rs  metricbench.rs  nodebench.rs  nodeinvoke.rs  outboxbench.rs  pgbench.rs  pinproof.rs  pocsuiteproof.rs  provisionbench.rs  publish_catalog_demo.rs  queuebench.rs  readerbench.rs  (+14 more)
crates/wamn-host/: Cargo.toml
crates/wamn-host/src/: apibench.rs  apifixture.rs  apiproof.rs  bench.rs  copy_project_env.rs  dispatch.rs  dispatchbench.rs  dump_project_env.rs  egress_guard.rs  egressbench.rs  enable_cdc_project_env.rs  engine.rs  env_policies.rs  event_reader.rs  f1bench.rs  f1proof.rs  failoverbench.rs  flowbench.rs  host.rs  identifiers.rs  lib.rs  logbench.rs  main.rs  memory_metrics.rs  migrate_catalog.rs  move_org_tier.rs  nodebench.rs  pgbench.rs  provision_org.rs  provision_project_env.rs  publish_catalog.rs  queuebench.rs  restore_project_env.rs  run_worker.rs  serve_node.rs  testhostbench.rs
crates/wamn-host/tests/: event_reader_live.rs  jetstream_wit_coherence.rs  postgres_wit_coherence.rs
crates/wamn-host/wit/: world.wit
crates/wamn-impact/: Cargo.toml
crates/wamn-impact/src/: lib.rs  nodescan.rs
crates/wamn-materializer/: Cargo.toml
crates/wamn-materializer/src/: condition.rs  context.rs  decide.rs  input.rs  lib.rs  sql.rs
crates/wamn-migrate/: Cargo.toml
crates/wamn-migrate/src/: engine.rs  lib.rs  model.rs  orphan.rs  replica_identity.rs  run_plane.rs  sql.rs
crates/wamn-migrate/tests/: migrate.rs
crates/wamn-node-guest/: Cargo.toml
crates/wamn-node-guest/src/: caps.rs  (+1 more)
crates/wamn-node-invoke/: Cargo.toml
crates/wamn-node-sdk/: Cargo.toml
crates/wamn-nodes/: Cargo.toml
crates/wamn-provision/: Cargo.toml
crates/wamn-registry/: Cargo.toml
crates/wamn-rls/: Cargo.toml
(+440 files in other folders)
