[workspace]
resolver = "2"
members = ["crates/wamn-host", "crates/wamn-ctl", "crates/wamn-dispatcher", "crates/wamn-run-worker", "crates/wamn-builder", "crates/wamn-cdc-reader", "crates/wamn-waker", "crates/wamn-gates", "crates/wamn-gate-harness", "crates/wamn-flow", "crates/wamn-catalog", "crates/wamn-ddl", "crates/wamn-schema", "crates/wamn-rls", "crates/wamn-seed", "crates/wamn-api", "crates/wamn-runner", "crates/wamn-sql", "crates/wamn-run-store", "crates/wamn-run-queue", "crates/wamn-testkit", "crates/wamn-node-sdk", "crates/wamn-nodes", "crates/wamn-node-guest", "crates/wamn-node-manifest", "crates/wamn-node-invoke", "crates/wamn-provision", "crates/wamn-registry", "crates/wamn-sysschema", "crates/wamn-migrate", "crates/wamn-event-wire", "crates/wamn-event-reg", "crates/wamn-materializer", "crates/wamn-flow-tests", "crates/wamn-impact", "poc/f1", "poc/dm1", "poc/cdc1"]
# Guest components are built separately for wasm32-wasip2 (see components/*).
exclude = ["components"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# wash-runtime is publish=false upstream; consumed from our fork
# (dkkloimwieder/wasmCloud). Branch wamn/2.5.2 = upstream runtime-operator
# v2.5.2 (ec012da) + the carried epoch-deadline and memory-limiter commits.
# Pin a REV, never a
# branch (immutable; the branch's existence keeps the SHA fetchable). Carried-
# commit ledger + sync runbook: docs/wash-runtime-fork.md.
# default-features off: `wasi-webgpu` pulls crates.io wasmtime alongside the
# workspace's git-pinned one (two wasmtimes = linker typecheck failures upstream
# solves with a [patch] we'd otherwise have to replicate).
wash-runtime = { git = "https://github.com/dkkloimwieder/wasmCloud", rev = "eef76cd8ab950966b6a74430545e7c4c4060b85e", default-features = false, features = ["washlet", "wasi-config", "wasi-logging", "wasi-otel"] }
# pg_walstream is consumed from our fork (dkkloimwieder/pg-walstream). Branch
# wamn/0.8.0 = upstream v0.8.0 (784e644) + the carried failover-slot-syntax
# commit (S-CDC-1 finding F1: legacy `… FAILOVER` → 42601 on PG17+; the fork
# emits the parenthesized option list). Pin a REV, never a branch.
# Carried-commit ledger + sync runbook: docs/pg-walstream-fork.md.
pg_walstream = { git = "https://github.com/dkkloimwieder/pg-walstream", rev = "0b007cd627bb913d4b159c705a106b6d4152c91a" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
async-trait = "0.1"

[profile.release]
lto = "thin"
