[workspace]
resolver = "2"
# Tiering (docs/archive/structure-review.md SR3): the components/ ROOT is the
# production tier; bench fixtures live under fixtures/, reference/sample
# nodes under samples/, and POC components carry a `poc-` name prefix.
members = ["api-gateway", "flow-driver", "flowrunner", "poc-webhook-f1", "fixtures/busyloop", "fixtures/cred-probe", "fixtures/hello", "fixtures/logspewer", "fixtures/memhog", "fixtures/pgprobe", "fixtures/trace-relay", "samples/node-rs", "samples/sample-node"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
strip = true
