[package]
name = "flowrunner"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The production runner (5.2) is the pure `wamn-runner` engine reducer over the
# canonical `wamn-flow` (5.1) graph; this component is the thin shell that drives
# it against wamn:postgres + the native standard nodes (the wamn-api pattern).
wamn-flow = { path = "../../crates/wamn-flow" }
wamn-runner = { path = "../../crates/wamn-runner" }
# Durable run state (5.7): the runs/node_runs model + branch-aware reconstruction
# this component persists into and resumes from (replacing the S3 step_seq).
wamn-run-store = { path = "../../crates/wamn-run-store" }

[lib]
crate-type = ["cdylib"]
