[package]
name = "flowrunner"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The production runner (5.2) is the pure `wamn-runner` engine reducer over the
# canonical `wamn-flow` (5.1) graph; this component is the thin shell that drives
# it against wamn:postgres + the native standard nodes (the wamn-api pattern).
wamn-flow = { path = "../../crates/wamn-flow" }
wamn-runner = { path = "../../crates/wamn-runner" }
# Durable run state (5.7): the runs/node_runs model + branch-aware reconstruction
# this component persists into and resumes from (replacing the S3 step_seq).
wamn-run-store = { path = "../../crates/wamn-run-store" }
# The standard node library (5.3) + the SDK capability facade this component
# implements over its real imports (wamn:postgres, wasi:http). The library is
# pure — node behavior, taxonomy classification, and the dispatch-time
# capability policy all live (and are tested) in the crates; this shell only
# mirrors WIT values and performs the effects.
wamn-node-sdk = { path = "../../crates/wamn-node-sdk" }
wamn-nodes = { path = "../../crates/wamn-nodes" }
# The SHARED capability facade (SR2): CapsCtx + the WIT<->SDK mirrors over
# wamn:postgres + outbound wasi:http live in the scaffolding crate's `caps`
# feature — this shell links them instead of copying them.
wamn-node-guest = { path = "../../crates/wamn-node-guest", features = ["caps"] }

[lib]
crate-type = ["cdylib"]
