[package]
name = "materializer"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen = "0.44"
serde_json = "1"
# The PURE per-event pipeline (decide/skip/refuse, condition eval under the
# REPLICA IDENTITY DEFAULT contract, causation budget, key/policy resolution,
# run-id + input mint) — this shell only performs the effects.
wamn-materializer = { path = "../../crates/wamn-materializer" }
# The declaration surfaces the sweep reads: registrations + the flow graph.
wamn-event-reg = { path = "../../crates/wamn-event-reg" }
wamn-event-wire = { path = "../../crates/wamn-event-wire" }
wamn-flow = { path = "../../crates/wamn-flow" }
# The write-ahead + evt-enqueue SQL builders. `default-features = false` keeps
# the dispatcher-only modules (croner/chrono) out of the wasm (the fqg.4
# flowrunner posture).
wamn-run-queue = { path = "../../crates/wamn-run-queue", default-features = false }

# A COMMAND component (wasi:cli/run via `main`), not a cdylib: the Service
# workload shape (E12) runs it in the host's restart loop.
