[package]
name = "webhook-entry"
version.workspace = true
edition.workspace = true

[dependencies]
wit-bindgen = "0.44"
serde_json = "1"
wamn-f1 = { path = "../../crates/wamn-f1" }
wamn-flow = { path = "../../crates/wamn-flow" }
wamn-runner = { path = "../../crates/wamn-runner" }

[lib]
crate-type = ["cdylib"]
