[package]
name = "wamn-api"
description = "wamn generated REST API gateway logic (4.1): compiles a catalog (3.1) to injection-safe parameterized SQL over the 3.2 tenant floor, and shapes row-sets to JSON."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The gateway routes/columns/types come from the canonical catalog (3.1); the
# generated SQL targets the 3.2-emitted tenant floor, reusing wamn-ddl's shared
# identifier quoting (the single source of truth for quoting — do not duplicate).
wamn-catalog = { path = "../wamn-catalog" }
wamn-ddl = { path = "../wamn-ddl" }
serde_json = "1"
