[package]
name = "wamn-builder"
description = "The custom-node build service (5.5): cargo|jco build in an isolated sandbox → the 5.5 import lint + dependency allowlist → ed25519 signature + CycloneDX SBOM → OCI push with the wamn.node.manifest annotation. A one-shot ctl-style verb binary (its OWN cargo-ful image, distinct from the slim wamn-ctl image)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["process", "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# The 5.5a interface-level lint + grant derivation live in the host library
# (reused verbatim by the builder), and the builder screens through the SAME
# production engine the host runs.
wamn-host = { path = "../wamn-host" }
