[package]
name = "wamn-ctl"
description = "wamn control-plane verbs (SR9): the one-shot provisioning / catalog / dump-restore-copy subcommands split out of wamn-host — same subcommand surface, no runtime linked (Job manifests swap only the image/binary)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
serde_json = "1"
tracing = { workspace = true }
# The verbs are println!-style tools; this fmt layer exists so --log-level
# keeps its meaning (dep diagnostics to stderr), matching the pre-split
# no-OTEL behavior of wash_runtime::observability::initialize_observability.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 4.1b publish-catalog: catalog snapshot model + the 3.2 tenant-floor DDL.
wamn-catalog = { path = "../wamn-catalog" }
wamn-ddl = { path = "../wamn-ddl" }
# publish-catalog --flow: parse/validate the flow graph before the flows row.
wamn-flow = { path = "../wamn-flow" }
# 2.5 migrate-catalog: the pure migration engine — reads the current applied
# catalog, plans the one-transaction apply (DDL + lifecycle + history).
wamn-migrate = { path = "../wamn-migrate" }
# 2.3 provision-project: the pure CREATE DATABASE / role / GRANT CONNECT
# builders + project-id naming + credential Secret rendering.
wamn-provision = { path = "../wamn-provision" }
# wamn-q3n.6 provision-org: the control-plane registry model + registry SQL.
wamn-registry = { path = "../wamn-registry" }
# wamn-8df.5 copy-project-env: the definition pass re-compiles the copied RLS
# policy rows and applies them on the dst.
wamn-rls = { path = "../wamn-rls" }
wamn-seed = { path = "../wamn-seed" }
# 9.6 prune-run-history: the single-source run-state SQL builder
# (`prune_terminal_runs_sql`) the retention verb and the capturebench gate share.
# 11.3 pin-run also reuses its run/node-run read builders + `capture::scrub`.
wamn-run-store = { path = "../wamn-run-store" }
# 11.3 pin-run: the pure `pin_run` transform (RunRecord + node_runs -> TestCase)
# and the canonical case vocabulary the pinned case is serialized as.
wamn-testkit = { path = "../wamn-testkit" }
# 11.8 impact-report / migrate-catalog acknowledge gate: the PURE schema-change
# impact analysis (entities → flows via registration + node config → suites →
# generated-API). This shell reads the dependency rows and calls wamn_impact::analyze.
wamn-impact = { path = "../wamn-impact" }
