[package]
name = "wamn-event-wire"
description = "D19 v3 event-plane wire contract (FROZEN 0.1.0, l5i9.30): envelope + subject + Nats-Msg-Id builders shared by the CDC reader and the materializer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
