[package]
name = "wamn-flow"
description = "Canonical wamn flow-graph schema (5.1): types, validation, import/export, version diff. A flow is data, not code."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The published JSON Schema contract (docs/flow-schema.schema.json) is GENERATED
# from these types (single source of truth); a drift test keeps them in lockstep.
schemars = "0.8"

[dev-dependencies]
# tests validate each fixture flow against the generated JSON Schema, tying the
# language-neutral contract to the Rust types. boon is a pure-Rust validator
# with no network/reqwest dependency.
boon = "0.6"
