[package]
name = "wamn-gates"
description = "The wamn gate suite: bench/pgbench/…/f1proof over the wamn-host library (SR1)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The production host library — gates construct the identical engines, hosts,
# and plugins the prod binary runs.
wamn-host = { path = "../wamn-host" }
# SR9: the one-shot control-plane verbs the provisioning/publish gates drive.
wamn-ctl = { path = "../wamn-ctl" }
# SR9: the per-service crates whose engines the bench gates drive directly.
wamn-dispatcher = { path = "../wamn-dispatcher" }
wamn-run-worker = { path = "../wamn-run-worker" }
# wakeproof (fqg.12) drives the deployed waker's k8s scale client to park +
# restore the runner Deployment around the scale-to-zero wake proof.
wamn-waker = { path = "../wamn-waker" }
wamn-gate-harness = { path = "../wamn-gate-harness" }
wash-runtime = { workspace = true }
# Bench harnesses instantiate command components directly (CommandPre) and
# drive wasi:http incoming handlers (ProxyPre). Pinned to the exact rev
# wash-runtime's workspace uses so the graph keeps a single wasmtime.
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "7535c0255b2b84f6ae4de6034649ba2eeda84173" }
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime", rev = "7535c0255b2b84f6ae4de6034649ba2eeda84173" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "net", "io-util", "rt", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
# S6 egress spy / prod handler comparisons: HostHandler::outgoing_request is in
# terms of hyper::Request.
hyper = "1"
# apibench/f1bench request bodies + response collection.
http-body-util = "0.1"
# apibench/f1bench build catalog snapshots + tenant-floor DDL for their
# ephemeral schemas.
wamn-catalog = { path = "../wamn-catalog" }
wamn-ddl = { path = "../wamn-ddl" }
# provisionbench: the pure provisioning naming / SQL / Secret builders (2.3),
# driven end-to-end through wamn_host::provision::provision_project. The org-pair
# / T3 tier modes (wamn-q3n.8) also drive the registry model + saga SQL builders.
wamn-provision = { path = "../wamn-provision" }
wamn-registry = { path = "../wamn-registry" }
# nodeinvoke crafts + signs raw invocation envelopes for the wamn-fqg.22 authn
# negatives (the same pure wire crate both hop ends link).
wamn-node-invoke = { path = "../wamn-node-invoke" }
# testkitbench (11.4) loads Vec<TestCase>, drives node/flow cases, and folds each
# AssertionResult into check — the pure assertion vocabulary. testhostbench's
# schemacase/runworker retrofit routes its inline asserts through the same.
wamn-testkit = { path = "../wamn-testkit" }
# buildproof drives the 5.5 builder's OCI fetch (registry client) + verifies the
# pushed artifact against the SAME NodeManifest model the builder wrote.
wamn-builder = { path = "../wamn-builder" }
wamn-node-manifest = { path = "../wamn-node-manifest" }
# queuebench/failoverbench/dispatchbench drive the pure queue/cron
# builders over tokio_postgres.
wamn-run-queue = { path = "../wamn-run-queue" }
# queuebench ceiling mode drives the pre-fqg.18 SPLIT lifecycle (claim → read →
# mark-running → complete → dequeue) as the comparison curve for the combined
# statements.
wamn-run-store = { path = "../wamn-run-store" }
# readerbench consumes the REAL draft envelope type the reader publishes — the
# stream-side assert deserializes with deny_unknown_fields (drift guard).
wamn-event-wire = { path = "../wamn-event-wire" }
# rie2ebench embeds the REAL reader service body (run_with_token) next to the
# materializer guest for the RI-flip e2e; pg_walstream only for its CancellationToken.
wamn-cdc-reader = { path = "../wamn-cdc-reader" }
wamn-event-reg = { path = "../wamn-event-reg" }
pg_walstream = { workspace = true }
wamn-flow = { path = "../wamn-flow" }
# queuebench/dispatchbench doorbell hints (same version req as wash-runtime's
# so cargo unifies to one crate instance).
async-nats = { version = "0.47", default-features = false }
# with-serde_json-1: the ceiling mode binds result_json (jsonb) params on the
# raw client — the production path sends text wire format via the plugin, but
# tokio_postgres binary binds need the typed Value.
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures-util = "0.3"
# socketguard synthesizes minimal adversarial + control components in-process
# (a socket-importing world vs a standard one) to drive the E13a publish-time
# egress guard hermetically — no external fixture build, no registry. Pinned to
# the wasm-encoder already in the graph via the wasmtime rev.
wasm-encoder = "0.251"

[dev-dependencies]
# f1fixture coherence test compiles the committed seed dataset (3.6).
wamn-seed = { path = "../wamn-seed" }
